Team4_k8s_App/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-manager-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: inventoryManagerTEAM4.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inventory-manager-service 
            port:
              number: 80
